--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             src="images\linkedin-logo.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/ashutosh-poudel-a61663281//'"
           />
           <img
-            src="images\github-logo.png"
+            src="images\instagram-logo.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://www.instagram.com/ashutosh_poudel/?hl=en'"
           />
         </div>
       </div>
@@ -263,14 +263,59 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
-            <div class="article-container">  
+            <div class="article-container">
             </div>
-            <h2 class="experience-sub-title project-title">TrekNopal</h2>
+            <h2 class="experience-sub-title project-title">Project trekNopal</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'">
+                onclick="location.href='https://github.com/Ashutosh9938'"
+              >
                 Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Ashutosh9938'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+            </div>
+            <h2 class="experience-sub-title project-title">Project</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Ashutosh9938'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Ashutosh9938'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+            </div>
+            <h2 class="experience-sub-title project-title">Project</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Ashutosh9938'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Ashutosh9938'"
+              >
+                Live Demo
               </button>
             </div>
           </div>
