--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <img src="images\profile-pic.png" alt=" profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">Hello, I'm </p>
         <h1 class="title">Ashutosh Poudel</h1>
         <p class="section__text__p2">Software Enginer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./images/AshutoshCV.pdf')"
           >
             Download CV
           </button>
